fixed sonar for multi module project